--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,14 +1,14 @@
 PORT = 4000
 
-MONGO_URI = mongodb+srv://jitz:jiten123@jobseeking.dt6k5jt.mongodb.net
+MONGO_URI = 
 
-CLOUDINARY_CLIENT_NAME = jodstorage
-CLOUDINARY_CLIENT_API = 543498326691412
-CLOUDINARY_CLIENT_SECRET =ztHb2icrP5pBqZc_Z0km0U_Y0Tw
+CLOUDINARY_CLIENT_NAME = 
+CLOUDINARY_CLIENT_API = 
+CLOUDINARY_CLIENT_SECRET = 
 
 FRONTEND_URL = http://localhost:5173/
 
-JWT_SECRET_KEY= kfgjflkdgjlfdjgkjngndffgjn
+JWT_SECRET_KEY= 
 JWT_EXPIRES=7d
 COOKIE_EXPIRE = 5
 
